--- a/blogger/Gemfile
+++ b/blogger/Gemfile
@@ -36,3 +36,6 @@ gem 'jquery-rails'
 
 # To use debugger
 # gem 'debugger'
+
+# Part of the tutorial - For uploading & adding files
+gem 'paperclip'
