--- a/blogger/Gemfile
+++ b/blogger/Gemfile
@@ -13,6 +13,10 @@ gem 'sqlite3'
 group :assets do
   gem 'sass-rails',   '~> 3.2.3'
   gem 'coffee-rails', '~> 3.2.1'
+  gem 'compass'
+  gem 'compass-rails'
+  gem 'susy'
+  gem 'compass-960-plugin'
 
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
   # gem 'therubyracer', :platforms => :ruby
