--- a/blogger/Gemfile
+++ b/blogger/Gemfile
@@ -51,3 +51,5 @@ gem 'sorcery'
 
 # Trying to fix 'undefined method `key?' for nil:NilClass' problem encountered in tutorial
 gem 'acl9'
+gem 'color'
+gem 'polychromasia', '> 0.0.2'
